# background_job_scheduler

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml  run_worker.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 29b731e42935_add_dead_letter_queue_table.py  3f564744aa3a_init_jobs_table.py  5ce7735b78ab_create_job_and_dead_letter_job_table.py
app/: config.py  database.py  dependencies.py  logging_config.py  main.py
app/api/: __init__.py  dashboard.py  dlq.py  jobs.py  router.py  sse.py
app/handlers/: email_handler.py
app/models/: dlq.py  job.py
app/repositories/: job_repository.py
app/scheduler/: benchmark.py  dlq_manager.py  heap.py  manager.py  timing_wheel.py
app/schemas/: dlq.py  job.py
app/services/: dlq_service.py  job_service.py
app/worker/: starvation.py  worker.py
frontend/: index.html  main.js  style.css
nginx/: nginx.conf
scripts/: deploy.sh
tests/: conftest.py  test_models.py  test_stress.py  test_worker.py
